Fix multi-line <a>'s vertical alignment in list items

--- a/public-src/css/foundation/_buttons.scss
+++ b/public-src/css/foundation/_buttons.scss
@@ -9,6 +9,7 @@
 
 a, button, .btn {
     display: inline-block;
+    vertical-align: top;
 
     &:focus {
         outline: dotted 1px currentColor;
